# robo-muehle

./: pyproject.toml
niryo/: main.py  robot_interface.py  test.py
src/ai/: helper.py
