[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-muehle"
version = "0.1.0"
description = "Robo Arm spielt Mühle"
authors = [
    { name = "Frederik Schwarz", email = "frederik@example.com" }
]
dependencies = [
    "numpy",
    "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"], include = ["*"] }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"  # optional: verbose, concise output
testpaths = ["tests"]
